testsuite/tests/linear/should_fail/LinearNoExt.stderr

LinearNoExt.hs:3:12: error:
    Enable LinearTypes to allow linear functions
